--- a/style/style.css
+++ b/style/style.css
@@ -26,7 +26,35 @@ body {
     flex: 1;
     flex-direction: column;
     align-items: center;
+
 }
+
+#inicio {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh
+}
+
+
+.columna {
+
+    width: 270px;
+
+}
+
+.btn {
+    width: 269px;
+    height: 66px;
+    background-color: #0A3871;
+    color: white;
+    padding: 12px 20px;
+    margin-bottom: 20px;
+    border: none;
+    border-radius: 24px;
+    cursor: pointer;
+}
+
 
 #aparece-ahorcado {
     display: flex;
