--- a/style/style.css
+++ b/style/style.css
@@ -5,13 +5,12 @@ html {
 
 body {
     background: #f3f5fc;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    font-size: 1.25em;
-    min-height: 100%;
-    width: 100%;
 
+
+}
+
+#img-logo {
+    margin: 20px;
 }
 
 .invisible {
@@ -23,9 +22,12 @@ body {
 }
 
 .contenedor {
-    flex: 1;
+    display: flex;
     flex-direction: column;
     align-items: center;
+    font-size: 1.25em;
+    min-height: 100%;
+    width: 100%;
 
 }
 
@@ -34,6 +36,10 @@ body {
     align-items: center;
     justify-content: center;
     height: 100vh
+}
+
+.botones {
+    margin-bottom: 20%;
 }
 
 
@@ -64,7 +70,17 @@ body {
 }
 
 canvas {
-    border: 1px solid black;
+    /* border: 1px solid black; */
     width: 100%;
 
+}
+
+footer {
+    text-align: center;
+    margin-top: auto;
+    padding: 10px;
+}
+
+.copyright {
+    font-size: 10px;
 }
